--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -4,10 +4,10 @@ After=network.target
 
 [Service]
 Type=simple
-User=__APP__
-Group=__APP__
+User=znc
+Group=znc
 WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/script >> /var/log/__APP__/__APP__.log 2>&1
+ExecStart=__FINALPATH__/script >> /var/log/znc/znc.log 2>&1
 
 [Install]
 WantedBy=multi-user.target
